Fix bug in css causing boxes to be created at the wrong size

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ button {
     width: 960px;
     height: 960px;
     border: 1px solid black;
-    box-sizing: border-box;
 }
 
 .black {
